fix: align Experience timeline dot to vertical line

--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -35,7 +35,7 @@
 
 .companyDot {
   position: absolute;
-  left: -29px;
+  left: -32px;
   top: 10px;
   width: 16px;
   height: 16px;
